syntax = "proto3";

package kepler.alliance;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "kepler/alliance/params.proto";
import "kepler/alliance/shared_entropy.proto";
import "kepler/alliance/quorum_params.proto";
import "kepler/alliance/alliances_timeline.proto";

option go_package = "kepler/x/alliance/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/kepler/alliance/params";
  
  }
  
  // Queries a SharedEntropy by index.
  rpc SharedEntropy (QueryGetSharedEntropyRequest) returns (QueryGetSharedEntropyResponse) {
    option (google.api.http).get = "/kepler/alliance/shared_entropy";
  
  }
  
  // Queries a QuorumParams by index.
  rpc QuorumParams (QueryGetQuorumParamsRequest) returns (QueryGetQuorumParamsResponse) {
    option (google.api.http).get = "/kepler/alliance/quorum_params";
  
  }
  
  // Queries a list of AlliancesTimeline items.
  rpc AlliancesTimeline    (QueryGetAlliancesTimelineRequest) returns (QueryGetAlliancesTimelineResponse) {
    option (google.api.http).get = "/kepler/alliance/alliances_timeline/{id}";
  
  }
  rpc AlliancesTimelineAll (QueryAllAlliancesTimelineRequest) returns (QueryAllAlliancesTimelineResponse) {
    option (google.api.http).get = "/kepler/alliance/alliances_timeline";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetSharedEntropyRequest {}

message QueryGetSharedEntropyResponse {
  SharedEntropy SharedEntropy = 1 [(gogoproto.nullable) = false];
}

message QueryGetQuorumParamsRequest {}

message QueryGetQuorumParamsResponse {
  QuorumParams QuorumParams = 1 [(gogoproto.nullable) = false];
}

message QueryGetAlliancesTimelineRequest {
  uint64 id = 1;
}

message QueryGetAlliancesTimelineResponse {
  AlliancesTimeline AlliancesTimeline = 1 [(gogoproto.nullable) = false];
}

message QueryAllAlliancesTimelineRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAlliancesTimelineResponse {
  repeated AlliancesTimeline                      AlliancesTimeline = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination        = 2;
}

